; ModuleID = '/home/carl/AnghaBench/redis/src/extr_rax.c_raxFreeWithCallback.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_rax.c_raxFreeWithCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @raxFreeWithCallback(%struct.TYPE_5__* %0, void (i8*)* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca void (i8*)*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store void (i8*)* %1, void (i8*)** %4, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 8
  %9 = load void (i8*)*, void (i8*)** %4, align 8
  %10 = call i32 @raxRecursiveFree(%struct.TYPE_5__* %5, i32 %8, void (i8*)* %9)
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp eq i64 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %18 = call i32 @rax_free(%struct.TYPE_5__* %17)
  ret void
}

declare dso_local i32 @raxRecursiveFree(%struct.TYPE_5__*, i32, void (i8*)*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @rax_free(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
